public/javascripts/SVLabel/css/svl-status.css
#status-holder {
    border: 3px dotted transparent;
    margin: 0;
    padding: 0;
    position: absolute;
    left: 735px;
    top: 53px;
    width: 200px;
    color: rgb(127, 127, 127);

}

.status-box {
    border-bottom: 1px dotted #ccc;
    margin: 3px 0 15px 0;
    padding: 0 0 10px 0;
    text-align: left;
}

.status-box a {
    color: rgba(128, 128, 128, 1);
    text-decoration: underline;
}

.status-box h1 {
    font-size: 12pt;
    margin: 0 0 4px 0;
}

.status-box h2 {
    font-size: 9pt;
    font-weight: normal;
    margin: 1px 0 5px 1px;
}

.status-column-half {
    padding: 5px 5px 5px 5px;
    margin: 5px 0 5px 0;
    width: 50%;
}

.status-icon {
    width: 25px;
}

#status-holder-neighborhood-name {
    display: inline;
}

/*#status-pane-title {*/
    /*border-bottom: 1px solid #ccc;*/
    /*font-size: 1em;*/
    /*margin-bottom: 3px;*/
    /*text-align: center;*/
/*}*/






/*#current-status-complete {*/
    /*background-color: rgb(254, 255, 223);*/
/*}*/

/*#current-status-title {*/
    /*font-weight: bold;*/
/*}*/

/*.status-holder-header-1 {*/
    /*font-weight: bold;*/
    /*font-size: 12pt;*/
/*}*/

